--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,12 @@
+* {
+  margin: 0;
+  padding: 0;
+}
+
+body {
+  padding: 20px 40px;
+}
+
 body.sl-theme-dark sl-details::part(summary),
 body.sl-theme-dark sl-details::part(summary-icon),
 body.sl-theme-dark label,
